﻿[B]1.0.1[/B]
- inputstream adaptive hozzáadása hls-hez
[B]1.0.0[/B]
- Első verzió