@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.ppcrn" name="PPCRN" version="1.0.1" provider-name="heg, vargalex">
+<addon id="plugin.video.ppcrn" name="PPCRN" version="1.0.2" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -15,6 +15,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 		
+			1.0.2 - os verzió kiszedése
 			1.0.1 - inputstream adaptive hozzáadása hls-hez
 			1.0.0 - Első verzió
 		</news>
